--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
-    "next": "12.2.5",
+    "js-cookie": "^3.0.1",
+    "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
